--- a/Flicks/Base.lproj/Main.storyboard
+++ b/Flicks/Base.lproj/Main.storyboard
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -154,6 +153,9 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <accessibility key="accessibilityConfiguration">
+                            <bool key="isElement" value="YES"/>
+                        </accessibility>
                     </view>
                     <navigationItem key="navigationItem" id="mPV-D8-qve"/>
                     <connections>
@@ -177,23 +179,53 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="t9O-hV-xXd">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="495"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Rh-9f-0vu">
-                                <rect key="frame" x="0.0" y="490" width="375" height="177"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tjD-ln-pwY">
+                                <rect key="frame" x="0.0" y="476" width="375" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                                <subviews>
+                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2HF-EN-4ZL">
+                                        <rect key="frame" x="-13" y="-15" width="388" height="165"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kEc-46-5FQ">
+                                                <rect key="frame" x="15" y="16" width="373" height="126"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <subviews>
+                                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="sfL-cE-qLq">
+                                                        <rect key="frame" x="0.0" y="19" width="373" height="99"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                    </textView>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6wp-In-Hnd">
+                                                        <rect key="frame" x="0.0" y="0.0" width="373" height="21"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            </view>
+                                        </subviews>
+                                    </scrollView>
+                                </subviews>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="qHw-nQ-Mln"/>
                     <connections>
-                        <outlet property="flickDetailDescription" destination="2Rh-9f-0vu" id="6Ws-ev-HU0"/>
+                        <outlet property="flickDetailContentView" destination="kEc-46-5FQ" id="tkK-68-9zF"/>
                         <outlet property="flickDetailImageView" destination="t9O-hV-xXd" id="ZTW-UV-k3f"/>
+                        <outlet property="flickDetailTitle" destination="6wp-In-Hnd" id="0qh-kf-AKp"/>
+                        <outlet property="flickScrollView" destination="tjD-ln-pwY" id="7cD-tu-wC4"/>
+                        <outlet property="flickTextView" destination="sfL-cE-qLq" id="6Pn-gX-qDv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9aR-zd-BBu" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -223,7 +255,7 @@
         <scene sceneID="Gko-K6-Fh0">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="3Yh-sg-m2M" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Now Playing" id="dLq-sF-z2b"/>
+                    <tabBarItem key="tabBarItem" title="Now Playing" image="/Users/leano/Flicks/iconmonstr-video-2-240.png" id="dLq-sF-z2b"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Eji-Ry-AHn">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -242,7 +274,7 @@
         <scene sceneID="NS1-oJ-M72">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="IKa-7G-1Nj" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Top Rated" id="mQz-GD-3vh"/>
+                    <tabBarItem key="tabBarItem" title="Top Rated" image="/Users/leano/Flicks/1485318926_thefreeforty_footage.icns" id="mQz-GD-3vh"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="w6p-FF-WRt">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -258,7 +290,11 @@
             <point key="canvasLocation" x="117.59999999999999" y="1019.640179910045"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="/Users/leano/Flicks/1485318926_thefreeforty_footage.icns" width="16" height="16"/>
+        <image name="/Users/leano/Flicks/iconmonstr-video-2-240.png" width="16" height="16"/>
+    </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="SEP-Lx-LR6"/>
+        <segue reference="gzZ-3I-ELc"/>
     </inferredMetricsTieBreakers>
 </document>
